# qt_canctl_jetson

./: .gitignore  CMakeLists.txt  README.md  canmanager.cpp  canmanager.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
